# Ocawk

./: README.md  dependencies.txt  dune-project  example.txt  ocawk.opam
examples/: README.md  process_lunar_eclipses.awk  setting_$0.awk  test.tsv  tsv_to_csv.awk  write_to_file
src/: ast.ml  compile.ml  defaults.ml  dune  exceptions.ml  lexer.mll  main.ml  ocawk.ml  parser.ml  parser.mly  run.ml  values.ml
test/: test.py
test/test_data/: example.tsv  oneliner.txt  zacmienia.csv
